syntax = "proto3";

package dnf.v1;

option go_package = "gen/dnf/v1";
option java_multiple_files = true;
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "BattleProto";

// ========== 请求消息 ==========

// 连接战斗服务器请求 (module=10014, cmd=0)
message ConnectBattleServerRequest {
  string authkey = 1;
  string openid = 2;
  int32 world = 3;
  int32 channel = 4;
  uint64 charguid = 5;
  int32 type = 6;
  uint64 dungeonguid = 7;
}

// ========== 响应消息 ==========

// 连接战斗服务器响应 (module=10014, cmd=1)
message ConnectBattleServerResponse {
  int32 error = 1;
  string authkey = 2;
  int32 bchannel = 3;
  uint64 servertime = 4;
  bool encrypt = 5;
  string key = 6;
  repeated int32 seeds = 7;
}
