syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1";
option java_multiple_files = true;
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "ServerDataProto";

// ========== 数据结构 ==========

// 服务器简单数据
message LoadServerSimpleData {
  int32 type = 1;
  int32 enumvalue = 2;
}

// ========== 请求消息 ==========

// 服务器简单数据加载请求 (module=10031, cmd=0)
message LoadServerSimpleDataRequest {
  repeated LoadServerSimpleData list = 1;
}

// 服务器简单数据保存请求 (module=10032, cmd=0)
message SaveServerSimpleDataRequest {
  int32 type = 1;
  int32 enumvalue = 2;
  string value = 3;
}

// ========== 响应消息 ==========

// 服务器简单数据加载响应 (module=10031, cmd=1)
message LoadServerSimpleDataResponse {
  int32 error = 1;
  int32 type = 2;
  int32 enumvalue = 3;
  string value = 4;
}

// 服务器简单数据保存响应 (module=10032, cmd=1)
message SaveServerSimpleDataResponse {
  int32 error = 1;
}
